# spec-kit-redteam-core

./: LICENSE  README.md  pyproject.toml  semantic_cache.db  test_async_orchestrator.py  test_semantic_cache.py  test_template_system.py  test_wizard.py
src/spec_kit_redteam_plugin/: __init__.py  async_orchestrator.py  budget_ui.py  caching.py  core_manager.py  error_handler.py  orchestrator.py  recovery_manager.py  token_tracker.py  version_manager.py
src/spec_kit_redteam_plugin/agents/: __init__.py  base_agent.py  pm_agent.py  qa_agent.py  security_agent.py  technical_agent.py
src/spec_kit_redteam_plugin/caching/: __init__.py  semantic_cache.py
src/spec_kit_redteam_plugin/commands/: collaborative.py  diagnostics.py  specification_wizard.py  template_cli.py
src/spec_kit_redteam_plugin/templates/: __init__.py  recommendation_engine.py  template_engine.py
src/spec_kit_redteam_plugin/templates/built_in/: basic-api-security.yaml  microservice-security.yaml  mobile-app-security.yaml  owasp-web-app.yaml
