[project]
name = "spec-kit-redteam-plugin"
version = "1.0.0"
description = "Multi-Agent RED TEAM Collaborative AI Plugin for Spec-Kit"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Spec-Kit Collaborative Team", email = "contact@spec-kit-collab.dev"},
]
license = {text = "MIT"}
keywords = ["ai", "specifications", "collaborative", "multi-agent", "red-team", "security", "software-development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "spec-kit>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "aiohttp>=3.8.0",
    "platformdirs>=3.0.0",
    "readchar>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.250",
    "mypy>=1.0.0",
]
cache = [
    "redis>=4.5.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.21.0",
]
monitoring = [
    "psutil>=5.9.0",
    "structlog>=23.0.0",
]

[project.urls]
"Homepage" = "https://github.com/boraeresici/spec-kit-collab"
"Repository" = "https://github.com/boraeresici/spec-kit-collab.git"
"Documentation" = "https://github.com/boraeresici/spec-kit-collab/blob/collab/README.md"
"Bug Reports" = "https://github.com/boraeresici/spec-kit-collab/issues"

[project.entry-points."spec_kit.plugins"]
collab = "spec_kit_redteam_plugin:RedTeamPlugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spec_kit_redteam_plugin"]